--- a/deployment/prometheus/prometheus.yml
+++ b/deployment/prometheus/prometheus.yml
@@ -34,6 +34,25 @@ scrape_configs:
     static_configs:
       - targets: ['pushgateway:9091']
 
+  - job_name: 'blackbox'
+    # scheme: http
+    metrics_path: /probe
+    params:
+      module: [http_2xx]  # Look for a HTTP 200 response.
+    static_configs:
+      - targets:
+        - http://prometheus.io    # Target to probe with http.
+        - https://prometheus.io   # Target to probe with https.
+        - http://0.0.0.0:8080     # fake local web service.
+        - http://www.google.ca
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox:9115  # The blackbox exporter's real hostname:port.    
+
 
 alerting:
   alertmanagers:
